--- a/aspnet-core-warmup.csproj
+++ b/aspnet-core-warmup.csproj
@@ -8,4 +8,10 @@
   <ItemGroup>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0-preview2.19525.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.0-preview2.19525.5" />
+  </ItemGroup>
+
 </Project>
